2010-05-30 03:42-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Projects/Application/Resources/main.m: Same as below.

2010-05-30 03:17-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Projects/Application/Resources/AppController.h
	* Modules/Projects/Application/Resources/AppController.m
	* Modules/Projects/Tool/Resources/main.m: Remove licensing
	and copyright information from these since we don't want to 
	assume that the user will be writing a GPLv3 program owned by the
	FSF (while that would be nice) it's not correct to assume it.

2010-05-30 01:54-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Framework/English.lproj/SaveModified.gorm: Correct issues with 
	Gorm file.
	* Framework/PCSaveModified.m: Use setTitle: instead of setStringValue:
	to set the titles of the buttons.
	
2010-05-30 01:44-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Editors/ProjectCenter/PCEditor.m: Temporarily comment out
	previous change util we find the proper fix as it was preventing 
	files from being saved.

2010-03-06 Riccardo Mottola <rmottola@users.sf.net>

	* Modules\Editors\ProjectCenter\PCEditor.m: setup undo on the editor
	view

2009-11-26 Richard frith-Macdonald <rfm@gnu.org>

	* Modules/Projects/Application/Resources/AppController.m:
	* Modules/Projects/Application/Resources/main.m:
	* Modules/Projects/Application/Resources/AppController.h:
	* Modules/Projects/Tool/Resources/main.m:
	Update to conform to coding standards and to use GPL 3 as
	default copyleft.

2009-09-20 03:45-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Framework/PCMakefileFactory.m: Check if buildDir is nil before 
	generating the BUILD_DIR directive in the make file.   Sometimes
	this is coming up with (nil) on Windows which is causing the build
	phase to fail.

2009-09-19 Riccardo Mottola <rmottola@users.sf.net>

	* Images/Options.tiff:
	Added new icon, drawn by me.
	
2009-09-18 Riccardo Mottola <rmottola@users.sf.net>
