@@ -1,3 +1,9 @@
+2010-06-01 Riccardo Mottola <rmottola@users.sf.net>
+
+	* Modules\Editors\ProjectCenter\PCEditor.m,
+	* Modules\Editors\ProjectCenter\PCEditor.m:
+	keep an undoManager for the Editor and return that to the window
+
 2010-05-30 03:42-EDT Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Modules/Projects/Application/Resources/main.m: Same as below.
